--- a/buy.html
+++ b/buy.html
@@ -38,42 +38,42 @@
         <p id="usuario-nav"></p>
     </nav>
     <main>
-        <div class="mattress">
-            <h2 class="title">Finalizar Compra.</h2>
+        <div class="mattress" id="info-compra">
+            <h2 class="title">Finalizar Compra</h2>
             <h6 class="subtitle">Dirección de envío</h6>
             <div class="contenedor">
                 <div>
                     <label>Departamento</label>
                     <div class="contenedor-input">
-                        <input type="text" name="departamento">
+                        <input type="text" name="departamento" id="departamento">
                     </div>
                 </div>
 
                 <div>
                     <label>Localidad</label>
                     <div class="contenedor-input">
-                        <input type="text" name="localidad">
+                        <input type="text" name="localidad" id="localidad">
                     </div>
                 </div>
 
                 <div>
                     <label>Calle</label>
                     <div class="contenedor-input">
-                        <input type="text" name="calle">
+                        <input type="text" name="calle" id="calle">
                     </div>
                 </div>
 
                 <div>
                     <label>Número</label>
                     <div class="contenedor-input">
-                        <input type="text" name="numero">
+                        <input type="text" name="numero" id="numero">
                     </div>
                 </div>
 
                 <div>
                     <label>Esquina</label>
                     <div class="contenedor-input">
-                        <input type="text" name="esquina">
+                        <input type="text" name="esquina" id="esquina">
                     </div>
                 </div>
             </div>
@@ -89,7 +89,7 @@
             <div class="contenedor" id="datos"></div>
             <h6 class="subtitle">Tipo de envío</h6>
             <div class="contenedor fit-content">
-                <select name="tipo-de-envio">
+                <select name="tipo-de-envio" id="tipo-de-envio">
                     <option value="0">Seleccione el tipo de envío</option>
                     <option value="1">Premium 2 a 5 días (15%)</option>
                     <option value="2">Express 5 a 8 días (7%)</option>
@@ -99,8 +99,9 @@
             <div class="costos">
                 <h6 class="subtitle">Costos</h6>
             </div>
-            <div class="contenedor">
-                <button id=""></button>
+             <div class="contenedor botones">
+                <button id="cancelar">Cancelar</button>
+                <button id="confirmar">Confirmar</button>
             </div>
         </div>
     </main>
